--- a/portfolio/src/style/team.css
+++ b/portfolio/src/style/team.css
@@ -4,6 +4,7 @@ body{
     flex-direction:row;
     flex-wrap:wrap;
     justify-content: center;
+    align-content: center;
     width:100%;
     padding:0;
     margin:0;
